--- a/src/styles/Searchbar.module.css
+++ b/src/styles/Searchbar.module.css
@@ -1,83 +1,95 @@
 .search-bar-container {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    width: 100%;
-    flex-wrap: nowrap;
-    padding: 0 10px;
-  }
-  
-  .search-bar {
-    flex-grow: 1;
-    margin-left: 30%;
-    display: flex;
-    position: relative;
-    max-width: 40%;
-    min-width: 300px;
-  }
-  
-  .search-bar input {
-    padding: 10px;
-    width: 100%;
-    border: 1px solid #333;
-    border-radius: 3px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-  }
-  
-  .search-bar input.light-input {
-    background-color: #ffffff;
-    color: #353535;
-  }
-  
-  .search-bar input.dark-input {
-    background-color: #333;
-    color: #ffffff;
-    border-color: #ffffff;
-  }
-  
-
-  
-  .search-bar .search-icon {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    pointer-events: none; 
-  }
-
-  .theme-switch {
-    background-color: #333;
-    height: 40px;
-    width: 40px;
-    padding: 0%;
-    border: none;
-    cursor: pointer;
-    border-radius: 10%;
-    transition: background-color 0.3s ease;
-    margin-left: 0;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  width: 100%;
+  flex-wrap: nowrap;
+  padding: 0 10px;
+}
 
 
-  .bonfire-gif {
-    padding-bottom: 10px;
-    margin-left: 190px;
-    width: 100px;
-    height: 100px;
-  }
+.search-bar {
+  flex-grow: 1;
+  margin: 0;
+  display: flex;
+  position: relative;
+  width: 90%;
+  max-width: 700px;
+  min-width: 200px;
+}
 
+.search-bar input {
+  padding: 10px;
+  width: 100%;
+  border: 1px solid #333;
+  border-radius: 3px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
 
-  @media (max-width: 1000px) {
-    .bonfire-gif {
+.search-bar input.light-input {
+  background-color: #ffffff;
+  color: #353535;
+}
+
+.search-bar input.dark-input {
+  background-color: #333;
+  color: #ffffff;
+  border-color: #ffffff;
+}
+
+.search-bar .search-icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; 
+}
+
+.theme-switch {
+  background-color: #333;
+  height: 40px;
+  width: 40px;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  border-radius: 10%;
+  transition: background-color 0.3s ease;
+  position: relative;
+}
+
+.gif {
+  padding-bottom: 10px;
+  margin-left: 20px;
+  width: 100px;
+  height: 100px;
+}
+
+.easter-egg {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 1.2em;
+  color: #ffcc00;
+  z-index: 20;
+}
+
+@media (max-width: 1000px) {
+  .gif {
       display: none;
-    }
   }
-  
-
   .easter-egg {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 1.2em;
-    color: #ffcc00;
-    z-index: 20;
+      display: none;
   }
+  .search-bar-container {
+      justify-content: center;
+  }
+  .search-bar {
+      margin-left: 0;
+      width: 90%;
+      max-width: 300px;
+  }
+  .theme-switch {
+      margin-left: 5px;
+  }
+}
